Ventana: Fix sysupgrade
Busybox version of ubi commands are inadequate for sysupgrade. Use full versions
instead.

Signed-off-by: Pushpal Sidhu <psidhu@gateworks.com>

--- a/gateworks/configs/imx6/.config
+++ b/gateworks/configs/imx6/.config
@@ -1785,12 +1785,12 @@ CONFIG_BUSYBOX_CONFIG_NANDDUMP=y
 # CONFIG_BUSYBOX_CONFIG_SETSERIAL is not set
 CONFIG_BUSYBOX_CONFIG_TASKSET=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_TASKSET_FANCY=y
-CONFIG_BUSYBOX_CONFIG_UBIATTACH=y
-CONFIG_BUSYBOX_CONFIG_UBIDETACH=y
-CONFIG_BUSYBOX_CONFIG_UBIMKVOL=y
-CONFIG_BUSYBOX_CONFIG_UBIRMVOL=y
-CONFIG_BUSYBOX_CONFIG_UBIRSVOL=y
-CONFIG_BUSYBOX_CONFIG_UBIUPDATEVOL=y
+# CONFIG_BUSYBOX_CONFIG_UBIATTACH is not set
+# CONFIG_BUSYBOX_CONFIG_UBIDETACH is not set
+# CONFIG_BUSYBOX_CONFIG_UBIMKVOL is not set
+# CONFIG_BUSYBOX_CONFIG_UBIRMVOL is not set
+# CONFIG_BUSYBOX_CONFIG_UBIRSVOL is not set
+# CONFIG_BUSYBOX_CONFIG_UBIUPDATEVOL is not set
 # CONFIG_BUSYBOX_CONFIG_ADJTIMEX is not set
 CONFIG_BUSYBOX_CONFIG_BBCONFIG=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_COMPRESS_BBCONFIG=y
@@ -2663,8 +2663,6 @@ CONFIG_PACKAGE_kmod-ikconfig=y
 CONFIG_PACKAGE_kmod-pps=y
 CONFIG_PACKAGE_kmod-pps-gpio=y
 CONFIG_PACKAGE_kmod-ptp=y
-CONFIG_PACKAGE_kmod-pwm=y
-CONFIG_PACKAGE_kmod-pwm-imx=y
 # CONFIG_PACKAGE_kmod-random-core is not set
 CONFIG_PACKAGE_kmod-regmap=y
 CONFIG_PACKAGE_kmod-rfkill=y
