--- a/gateworks/configs/imx6/.config
+++ b/gateworks/configs/imx6/.config
@@ -295,7 +295,7 @@ CONFIG_VERSIONOPT=y
 CONFIG_VERSION_DIST="Gateworks"
 CONFIG_VERSION_NICK=""
 CONFIG_VERSION_NUMBER="Gateworks Ventana $(shell $(TOPDIR)/gateworks/scripts/version_number.sh)"
-CONFIG_VERSION_REPO="http://downloads.openwrt.org/snapshots/trunk/%T/packages"
+CONFIG_VERSION_REPO="http://dev.gateworks.com/openwrt/16.02/%T/packages/"
 CONFIG_VERSION_MANUFACTURER="Gateworks"
 CONFIG_VERSION_MANUFACTURER_URL=""
 CONFIG_VERSION_PRODUCT="Ventana"
