Laguna/Ventana: Turn off package signing
Because build keys differ per build host, turning this off allows developers
to opkg install pre-built packages by Gateworks at dev.gateworks.com even if
they build their own images. Please turn this option back on if required.

Signed-off-by: Pushpal Sidhu <psidhu@gateworks.com>

--- a/gateworks/configs/cns3xxx/.config
+++ b/gateworks/configs/cns3xxx/.config
@@ -119,7 +119,7 @@ CONFIG_TARGET_ROOTFS_INCLUDE_FIT=y
 #
 # CONFIG_ALL_KMODS is not set
 # CONFIG_ALL is not set
-CONFIG_SIGNED_PACKAGES=y
+# CONFIG_SIGNED_PACKAGES is not set
 
 #
 # General build options
