--- a/gateworks/configs/imx6/.config
+++ b/gateworks/configs/imx6/.config
@@ -145,7 +145,7 @@ CONFIG_TARGET_ROOTFS_INCLUDE_DTB=y
 #
 # CONFIG_ALL_KMODS is not set
 # CONFIG_ALL is not set
-CONFIG_SIGNED_PACKAGES=y
+# CONFIG_SIGNED_PACKAGES is not set
 
 #
 # General build options
