--- a/gateworks/configs/imx6/.config
+++ b/gateworks/configs/imx6/.config
@@ -4965,7 +4965,7 @@ CONFIG_PACKAGE_getopt=y
 # CONFIG_PACKAGE_haserl is not set
 # CONFIG_PACKAGE_haveged is not set
 # CONFIG_PACKAGE_hub-ctrl is not set
-CONFIG_PACKAGE_hwclock=y
+# CONFIG_PACKAGE_hwclock is not set
 CONFIG_PACKAGE_i2c-tools=y
 # CONFIG_PACKAGE_iconv is not set
 # CONFIG_PACKAGE_iwcap is not set
