--- a/gateworks/configs/cns3xxx/.config
+++ b/gateworks/configs/cns3xxx/.config
@@ -288,7 +288,7 @@ CONFIG_OPKGSMIME_PASSPHRASE=y
 # Base system
 #
 CONFIG_PACKAGE_base-files=y
-# CONFIG_PACKAGE_block-mount is not set
+CONFIG_PACKAGE_block-mount=y
 CONFIG_PACKAGE_bridge=y
 CONFIG_PACKAGE_busybox=y
 CONFIG_BUSYBOX_CUSTOM=y
@@ -4970,7 +4970,7 @@ CONFIG_PACKAGE_stress=y
 # CONFIG_PACKAGE_triggerhappy is not set
 CONFIG_PACKAGE_uboot-envtools=y
 # CONFIG_UBOOT_ENVTOOLS_UBI is not set
-CONFIG_PACKAGE_ugps=y
+# CONFIG_PACKAGE_ugps is not set
 CONFIG_PACKAGE_usb-modeswitch=y
 # CONFIG_PACKAGE_usbmuxd is not set
 CONFIG_PACKAGE_usbreset=y
