--- a/gateworks/configs/imx6/.config
+++ b/gateworks/configs/imx6/.config
@@ -318,7 +318,7 @@ CONFIG_OPKGSMIME_PASSPHRASE=y
 # Base system
 #
 CONFIG_PACKAGE_base-files=y
-# CONFIG_PACKAGE_block-mount is not set
+CONFIG_PACKAGE_block-mount=y
 CONFIG_PACKAGE_bridge=y
 CONFIG_PACKAGE_busybox=y
 CONFIG_BUSYBOX_CUSTOM=y
@@ -5081,7 +5081,7 @@ CONFIG_PACKAGE_tar=y
 CONFIG_PACKAGE_ubi-utils=y
 CONFIG_PACKAGE_uboot-envtools=y
 CONFIG_UBOOT_ENVTOOLS_UBI=y
-CONFIG_PACKAGE_ugps=y
+# CONFIG_PACKAGE_ugps is not set
 CONFIG_PACKAGE_usb-modeswitch=y
 # CONFIG_PACKAGE_usbmuxd is not set
 CONFIG_PACKAGE_usbreset=y
