Laguna/Ventana: add busybox arp
Add busybox arp to replace the one we used to use from net-tools-arp which
has not been moved to new packages feed.

Signed-off-by: Tim Harvey <tharvey@gateworks.com>

--- a/gateworks/configs/cns3xxx/.config
+++ b/gateworks/configs/cns3xxx/.config
@@ -960,8 +960,8 @@ CONFIG_BUSYBOX_DEFAULT_FEATURE_IPV6=y
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_UNIX_LOCAL is not set
 CONFIG_BUSYBOX_DEFAULT_FEATURE_PREFER_IPV4_ADDRESS=y
 CONFIG_BUSYBOX_DEFAULT_VERBOSE_RESOLUTION_ERRORS=y
-# CONFIG_BUSYBOX_DEFAULT_ARP is not set
-# CONFIG_BUSYBOX_DEFAULT_ARPING is not set
+CONFIG_BUSYBOX_DEFAULT_ARP=y
+CONFIG_BUSYBOX_DEFAULT_ARPING=y
 CONFIG_BUSYBOX_DEFAULT_BRCTL=y
 CONFIG_BUSYBOX_DEFAULT_FEATURE_BRCTL_FANCY=y
 CONFIG_BUSYBOX_DEFAULT_FEATURE_BRCTL_SHOW=y
