config: obtain version from GIT branch/revision
Signed-off-by: Tim Harvey <tharvey@gateworks.com>

--- a/gateworks/configs/cns3xxx/.config
+++ b/gateworks/configs/cns3xxx/.config
@@ -237,7 +237,7 @@ CONFIG_TARGET_INIT_SUPPRESS_STDERR=y
 CONFIG_VERSIONOPT=y
 CONFIG_VERSION_DIST="Gateworks"
 CONFIG_VERSION_NICK=""
-CONFIG_VERSION_NUMBER="Gateworks Laguna 14.08-r$(shell svnversion -c $(TOPDIR)/../ | awk -F: '{print $$2}')"
+CONFIG_VERSION_NUMBER="Gateworks Laguna $(shell $(TOPDIR)/gateworks/scripts/version_number.sh)"
 CONFIG_VERSION_REPO="http://dev.gateworks.com/openwrt/14.08/%T/packages"
 CONFIG_VERSION_MANUFACTURER="Gateworks"
 CONFIG_VERSION_PRODUCT="Laguna"
