--- a/gateworks/configs/imx6/.config
+++ b/gateworks/configs/imx6/.config
@@ -2400,6 +2400,7 @@ CONFIG_PACKAGE_kmod-input-evdev=y
 # CONFIG_PACKAGE_kmod-input-gpio-keys is not set
 # CONFIG_PACKAGE_kmod-input-gpio-keys-polled is not set
 # CONFIG_PACKAGE_kmod-input-joydev is not set
+CONFIG_PACKAGE_kmod-input-lsm9ds1=y
 # CONFIG_PACKAGE_kmod-input-matrixkmap is not set
 CONFIG_PACKAGE_kmod-input-mfd-gsc=y
 CONFIG_PACKAGE_kmod-input-mma8451=y
