gateworks: Makefile: unhide output of 'make defconfig'
The output of this command gives valuable information on the current system,
and offers advice on missing packages that are required to build OpenWrt.

Signed-off-by: Pushpal Sidhu <psidhu@gateworks.com>

--- a/gateworks/Makefile
+++ b/gateworks/Makefile
@@ -27,7 +27,7 @@ setup:
 	fi
 
 	@printf "Updating Feeds...\n"
-	@make -C $(OPENWRT) defconfig &>/dev/null # first pkg feed update req's this
+	@make -C $(OPENWRT) defconfig # first pkg feed update req's this
 	make -C $(OPENWRT)/ package/symlinks || test 0
 
 define make-profile
