feeds.conf.default: bump gateworks feeds to include new packages
gpsd and mtd-utils were added to the gateworks package feed in order to provide
the following:
 * Override configs (gpsd)
 * add new tools such as flash_erase

Also refresh configs to reflect changes caused by the above.

Signed-off-by: Pushpal Sidhu <psidhu@gateworks.com>

--- a/gateworks/configs/imx6/.config
+++ b/gateworks/configs/imx6/.config
@@ -1783,8 +1783,8 @@ CONFIG_BUSYBOX_CONFIG_FEATURE_LESS_BRACKETS=y
 # CONFIG_BUSYBOX_CONFIG_FEATURE_LESS_REGEXP is not set
 # CONFIG_BUSYBOX_CONFIG_FEATURE_LESS_WINCH is not set
 # CONFIG_BUSYBOX_CONFIG_FEATURE_LESS_DASHCMD is not set
-CONFIG_BUSYBOX_CONFIG_NANDWRITE=y
-CONFIG_BUSYBOX_CONFIG_NANDDUMP=y
+# CONFIG_BUSYBOX_CONFIG_NANDWRITE is not set
+# CONFIG_BUSYBOX_CONFIG_NANDDUMP is not set
 # CONFIG_BUSYBOX_CONFIG_RFKILL is not set
 # CONFIG_BUSYBOX_CONFIG_SETSERIAL is not set
 CONFIG_BUSYBOX_CONFIG_TASKSET=y
@@ -1808,10 +1808,10 @@ CONFIG_BUSYBOX_CONFIG_CRONTAB=y
 CONFIG_BUSYBOX_CONFIG_DEVMEM=y
 # CONFIG_BUSYBOX_CONFIG_EJECT is not set
 # CONFIG_BUSYBOX_CONFIG_FBSPLASH is not set
-CONFIG_BUSYBOX_CONFIG_FLASHCP=y
-CONFIG_BUSYBOX_CONFIG_FLASH_LOCK=y
-CONFIG_BUSYBOX_CONFIG_FLASH_UNLOCK=y
-CONFIG_BUSYBOX_CONFIG_FLASH_ERASEALL=y
+# CONFIG_BUSYBOX_CONFIG_FLASHCP is not set
+# CONFIG_BUSYBOX_CONFIG_FLASH_LOCK is not set
+# CONFIG_BUSYBOX_CONFIG_FLASH_UNLOCK is not set
+# CONFIG_BUSYBOX_CONFIG_FLASH_ERASEALL is not set
 # CONFIG_BUSYBOX_CONFIG_IONICE is not set
 # CONFIG_BUSYBOX_CONFIG_INOTIFYD is not set
 # CONFIG_BUSYBOX_CONFIG_HDPARM is not set
@@ -5021,6 +5021,46 @@ CONFIG_PACKAGE_libjson-script=y
 # CONFIG_PACKAGE_mountd is not set
 # CONFIG_PACKAGE_mpack is not set
 # CONFIG_PACKAGE_mt-st is not set
+CONFIG_PACKAGE_mtd-utils=y
+# CONFIG_PACKAGE_mtd-utils-doc-loadbios is not set
+# CONFIG_PACKAGE_mtd-utils-docfdisk is not set
+CONFIG_PACKAGE_mtd-utils-flash-erase=y
+CONFIG_PACKAGE_mtd-utils-flash-eraseall=y
+CONFIG_PACKAGE_mtd-utils-flash-lock=y
+# CONFIG_PACKAGE_mtd-utils-flash-otp-dump is not set
+# CONFIG_PACKAGE_mtd-utils-flash-otp-lock is not set
+# CONFIG_PACKAGE_mtd-utils-flash-otp-write is not set
+CONFIG_PACKAGE_mtd-utils-flash-unlock=y
+# CONFIG_PACKAGE_mtd-utils-flashcp is not set
+# CONFIG_PACKAGE_mtd-utils-ftl-check is not set
+# CONFIG_PACKAGE_mtd-utils-ftl-format is not set
+# CONFIG_PACKAGE_mtd-utils-jffs2dump is not set
+# CONFIG_PACKAGE_mtd-utils-jffs2reader is not set
+# CONFIG_PACKAGE_mtd-utils-mkfs.jffs2 is not set
+CONFIG_PACKAGE_mtd-utils-mkfs.ubifs=y
+# CONFIG_PACKAGE_mtd-utils-mtd-debug is not set
+CONFIG_PACKAGE_mtd-utils-mtdinfo=y
+CONFIG_PACKAGE_mtd-utils-nanddump=y
+CONFIG_PACKAGE_mtd-utils-nandtest=y
+CONFIG_PACKAGE_mtd-utils-nandwrite=y
+# CONFIG_PACKAGE_mtd-utils-nftl-format is not set
+# CONFIG_PACKAGE_mtd-utils-nftldump is not set
+# CONFIG_PACKAGE_mtd-utils-recv-image is not set
+# CONFIG_PACKAGE_mtd-utils-rfddump is not set
+# CONFIG_PACKAGE_mtd-utils-rfdformat is not set
+# CONFIG_PACKAGE_mtd-utils-serve-image is not set
+# CONFIG_PACKAGE_mtd-utils-sumtool is not set
+CONFIG_PACKAGE_mtd-utils-ubiattach=y
+CONFIG_PACKAGE_mtd-utils-ubicrc32=y
+CONFIG_PACKAGE_mtd-utils-ubidetach=y
+CONFIG_PACKAGE_mtd-utils-ubiformat=y
+CONFIG_PACKAGE_mtd-utils-ubimkvol=y
+CONFIG_PACKAGE_mtd-utils-ubinfo=y
+CONFIG_PACKAGE_mtd-utils-ubinize=y
+CONFIG_PACKAGE_mtd-utils-ubirename=y
+CONFIG_PACKAGE_mtd-utils-ubirmvol=y
+CONFIG_PACKAGE_mtd-utils-ubirsvol=y
+CONFIG_PACKAGE_mtd-utils-ubiupdatevol=y
 # CONFIG_PACKAGE_namei is not set
 # CONFIG_PACKAGE_nfc-utils is not set
 # CONFIG_PACKAGE_ocf-crypto-headers is not set
